--- a/app/views/add.html
+++ b/app/views/add.html
@@ -163,7 +163,13 @@
 				<form action="/checklist/add" method="post">
 					<table>
 						<tr>
-							<td><input type="text" name="text" /></td>
+							<td><input type="text" name="text" />Text</td>
+						</tr>
+						<tr>
+							<td><input type="text" name="userid"/>userid</td>
+						</tr>
+						<tr>
+							<td><input type="text" name="category"/>Category</td>
 						</tr>
 						<tr>
 							<td><input type="submit" name="add" value="Add" /></td>
