--- a/app/views/edit.html
+++ b/app/views/edit.html
@@ -145,11 +145,12 @@
 
 <body>
 <!-- webpage content goes here in the body -->
-
-<button class="button">Help</button>
-<button class="button"><a href="/home/">Home</a></button>
+<button class="button"><a href="/">Home</a></button>
 <button class="button"><a href="/register">Register</a></button>
 <button class="button"><a href="/checklist">Checklist</a></button>
+<button class="button"><a href="/signin">Log in</a></button>
+<button class="button"><a href="/logout">Log Out</a></button>
+<button class="button"><a href="/contactus">Contact Us</a></button>
 
 <p> Edit {{ note.id}}</p>
 
