--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="/Users/kungen/Documents/testaLoginMedDatabas/app/public/css/firstpStyle.css" type="text/css" />
-	<title></title>
-
+	<link rel="stylesheet" type="text/css" href="firstpStyle.css">	<title></title>
 	<style>
 	/*
 	* multi-line comment
@@ -144,16 +142,15 @@
 	ul li a{ box-shadow: 0px 1px 1px #999; }
 
 	</style>
-
 </head>
 <body>
 
-<button class="button">Help</button>
-<button class="button">Home</button>
+<button class="button"><a href="/">Home</a></button>
 <button class="button"><a href="/register">Register</a></button>
 <button class="button"><a href="/checklist">Checklist</a></button>
-<button class="button"><a href="/signin">Sign In</a></button>
+<button class="button"><a href="/signin">Log in</a></button>
 <button class="button"><a href="/logout">Log Out</a></button>
+<button class="button"><a href="/contactus">Contact Us</a></button>
 
 	<div id="page">
 		<div id="logo" style="text-align: center">
