--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -147,14 +147,12 @@
 
 </head>
 <body>
-
-<button class="button">Help</button>
-<button class="button">Home</button>
-<button class="button"><a href="/register">Register</a></button>
-<button class="button"><a href="/checklist">Checklist</a></button>
-<button class="button"><a href="/home/calendar">Calendar</a></button>
-<button class="button"><a href="/signin">Sign In</a></button>
-<button class="button"><a href="/logout">Log Out</a></button>
+	<button class="button"><a href="/">Home</a></button>
+	<button class="button"><a href="/register">Register</a></button>
+	<button class="button"><a href="/checklist">Checklist</a></button>
+	<button class="button"><a href="/signin">Log in</a></button>
+	<button class="button"><a href="/logout">Log Out</a></button>
+	<button class="button"><a href="/contactus">Contact Us</a></button>
 
 	<div id="page">
 		<div id="logo" style="text-align: center">
