--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="css/firstpStyle.css">	<title></title>
+  <script src="Scripts/jquery-3.1.1.min.js"></script>
+  <script src="Scripts/jquery.form.min.js"></script>
 </head>
 <body>
 
@@ -24,6 +26,16 @@
 		<div id="content">
 			<p>
         Hi! This is you settings page. Here you can see your information.
+
+        <img id="blah" src="" alt="your image" />
+
+        <form id="frmUploader" enctype="multipart/form-data" action="api/Upload/" method="post">
+        <input type="file" name="imgUploader" multiple />
+        <input type="submit" name="submit" id="btnSubmit" value="Upload" /> </form>
+
+
+
+
         <ul id="myUL">
           <table>
             {{#userinfo}}
@@ -42,6 +54,13 @@
 		</div>
 
 	</div>
+
+
+  <script>
+    $(document).ready(function() {
+      var options = {
+      beforeSubmit: showRequest, // pre-submit callback success: showResponse // post-submit callback }; // bind to the form's submit event $('#frmUploader').submit(function () { $(this).ajaxSubmit(options); // always return false to prevent standard browser submit and page navigation return false; }); }); // pre-submit callback function showRequest(formData, jqForm, options) { alert('Uploading is starting.'); return true; } // post-submit callback function showResponse(responseText, statusText, xhr, $form) { alert('status: ' + statusText + '\n\nresponseText: \n' + responseText ); }
+    </script>
 
 </body>
 <br>
