--- a/app/views/add.html
+++ b/app/views/add.html
@@ -13,6 +13,7 @@
 <button class="button"><a href="/logout">Log Out</a></button>
 <button class="button"><a href="/contactus">Contact Us</a></button>
 <button class="button"><a href="/calendar">Calendar</a></button>
+<button class="button"><a href="/settings">Settings</a></button>
 
 <p> Add</p>
 
