--- a/app/views/home.html
+++ b/app/views/home.html
@@ -11,8 +11,8 @@
 <button class="button"><a href="/signin">Log in</a></button>
 <button class="button"><a href="/logout">Log Out</a></button>
 <button class="button"><a href="/contactus">Contact Us</a></button>
-<button class="button"><a href="/settings">Settings</a></button>
 <button class="button"><a href="/calendar">Calendar</a></button>
+<button class="button"><a href="/settings">Settings</a></button>
 
 	<div id="page">
 		<div id="logo" style="text-align: center">
@@ -24,6 +24,16 @@
 		<div id="content">
 			<p>
         Have fun!
+				<p>
+					This is BOPO - your bright online personal organizer.
+					The idea is for you to sort your life out with our fun concept.
+					BOPO is a combination of the very best organizing websites such
+					as Google calendar, Trello and Pinterest. It may not be completely
+					done yet, but it is still pretty good.
+
+					If you have any questions, please use the contact form to ask them.
+
+				</p>
 			</p>
 
 		</div>
