--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -14,6 +14,7 @@
 <button class="button"><a href="/logout">Log Out</a></button>
 <button class="button"><a href="/contactus">Contact Us</a></button>
 <button class="button"><a href="/calendar">Calendar</a></button>
+<button class="button"><a href="/settings">Settings</a></button>
 
 
 	<div id="page">
@@ -26,16 +27,6 @@
 		<div id="content">
 			<p>
         Hi! This is you settings page. Here you can see your information.
-
-        <img id="blah" src="" alt="your image" />
-
-        <form id="frmUploader" enctype="multipart/form-data" action="api/Upload/" method="post">
-        <input type="file" name="imgUploader" multiple />
-        <input type="submit" name="submit" id="btnSubmit" value="Upload" /> </form>
-
-
-
-
         <ul id="myUL">
           <table>
             {{#userinfo}}
@@ -51,16 +42,69 @@
         </ul>
 			</p>
 
+      <p>
+        Delete your account:
+
+        <p>
+  				<form action="/deleteuser" method="post">
+  					<table>
+  						<tr>
+  							<td><input type="email" name="email" />email</td>
+  						</tr>
+  						<tr>
+  							<td><input type="text" name="password" />password</td>
+  						</tr>
+  						<tr>
+  							<td><input type="submit" name="deleteuser" value="Deleteuser" /></td>
+  						</tr>
+  					</table>
+  				</form>
+  			<!-- </p> -->
+        <p> Upload a profile picture:
+
+          <script type='text/javascript'>
+              function main()
+              {
+                  var inputFileToLoad = document.createElement("input");
+                  inputFileToLoad.type = "file";
+                  inputFileToLoad.id = "inputFileToLoad";
+                  document.body.appendChild(inputFileToLoad);
+
+                  var buttonLoadFile = document.createElement("button");
+                  buttonLoadFile.onclick = loadImageFileAsURL;
+                  buttonLoadFile.textContent = "Load Selected File";
+                  document.body.appendChild(buttonLoadFile);
+              }
+
+              function loadImageFileAsURL()
+              {
+                  var filesSelected = document.getElementById("inputFileToLoad").files;
+                  if (filesSelected.length > 0)
+                  {
+                      var fileToLoad = filesSelected[0];
+
+                      if (fileToLoad.type.match("image.*"))
+                      {
+                          var fileReader = new FileReader();
+                          fileReader.onload = function(fileLoadedEvent)
+                          {
+                              var imageLoaded = document.createElement("img");
+                              imageLoaded.src = fileLoadedEvent.target.result;
+                              document.body.appendChild(imageLoaded);
+                          };
+                          fileReader.readAsDataURL(fileToLoad);
+                      }
+                  }
+              }
+
+              main();
+          </script>
+        </p>
+      </p>
+    </p>
 		</div>
 
 	</div>
-
-
-  <script>
-    $(document).ready(function() {
-      var options = {
-      beforeSubmit: showRequest, // pre-submit callback success: showResponse // post-submit callback }; // bind to the form's submit event $('#frmUploader').submit(function () { $(this).ajaxSubmit(options); // always return false to prevent standard browser submit and page navigation return false; }); }); // pre-submit callback function showRequest(formData, jqForm, options) { alert('Uploading is starting.'); return true; } // post-submit callback function showResponse(responseText, statusText, xhr, $form) { alert('status: ' + statusText + '\n\nresponseText: \n' + responseText ); }
-    </script>
 
 </body>
 <br>
