--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -11,7 +11,8 @@
 	<button class="button"><a href="/logout">Log Out</a></button>
 	<button class="button"><a href="/contactus">Contact Us</a></button>
 	<button class="button"><a href="/calendar">Calendar</a></button>
-	
+	<button class="button"><a href="/settings">Settings</a></button>
+
 
 	<div id="page">
 		<div id="logo" style="text-align: center">
