--- a/app/views/home.html
+++ b/app/views/home.html
@@ -19,8 +19,7 @@
 
 			<h1><a href="/" id="logoLink"> Welcome to your online personal calendar</a></h1>
 		</div>
-		<div id="nav">
-		</div>
+		<div id="nav"></div>
 		<div id="content">
 			<p>
         Have fun!
