ändringar i calendar.css

--- a/app/views/calendar.html
+++ b/app/views/calendar.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--<meta http-equiv="Content-Type">-->
-	<link rel="stylesheet" type="text/css" href="css/firstpStyle.css">
-	<!--<link rel="stylesheet" href="/css/calendar.css">-->
+	<!--<link rel="stylesheet" type="text/css" href="css/firstpStyle.css">-->
+	<link rel="stylesheet" href="/css/calendar.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/lib/fullcalendar/dist/fullcalendar.css" />
 	<script src="/lib/moment/min/moment.min.js"></script>
@@ -162,7 +162,8 @@
 					<p id="eventInfo"></p>
 					<p><strong><a id="eventLink" href="" target="_blank">Read More</a></strong></p>
 					</div>
-				</div>	
+					</div>	
+				
 			</div>
 		</div>
 	</div>
